--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,45 @@
 asgiref==3.5.2
-Django==4.0.5
-django-taggit==3.0.0
-django-tinymce==3.4.0
+boto==2.49.0
+boto3==1.26.37
+botocore==1.29.37
+certifi==2022.9.24
+cffi==1.15.1
+charset-normalizer==2.1.1
+colorama==0.4.6
+cryptography==38.0.4
+defusedxml==0.7.1
+Django==4.1.3
+django-allauth==0.51.0
+django-allauth-2fa==0.10.0
+django-bootstrap-datepicker-plus==5.0.2
+django-ckeditor==6.5.1
+django-crispy-forms==1.14.0
+django-filebrowser==4.0.2
+django-grappelli==3.0.4
+django-js-asset==2.0.0
+django-otp==1.1.4
+django-storages==1.13.2
+django-taggit==3.1.0
+django-tinymce==3.5.0
+django-tinymce-4==0.0.27
 django-widget-tweaks==1.4.12
-Pillow==9.1.1
-sqlparse==0.4.2
-tk==0.1.0
-tzdata==2022.1
+idna==3.4
+jmespath==1.0.1
+oauthlib==3.2.2
+Pillow==9.3.0
+psycopg2==2.9.5
+pycparser==2.21
+pydantic==1.10.2
+PyJWT==2.6.0
+python-dateutil==2.8.2
+python3-openid==3.2.0
+qrcode==7.3.1
+requests==2.28.1
+requests-oauthlib==1.3.1
+s3transfer==0.6.0
+six==1.16.0
+sqlparse==0.4.3
+typing_extensions==4.4.0
+tzdata==2022.7
+urllib3==1.26.13
+whitenoise==6.2.0
